--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,7 +81,7 @@ body.appear {
 }
 
 header {
-  height: var(--nav-height);
+  min-height: var(--nav-height);
 }
 
 header .header,
